[tool.poetry]
name = "jump-to-django"
version = "0.1.0"
description = ""
authors = ["kdw"]
license = "MIT"
readme = "README.md"
packages = [{include = "jump_to_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
